--- a/source/css/_custom/anzhiyu/custom.css
+++ b/source/css/_custom/anzhiyu/custom.css
@@ -143,11 +143,11 @@ div#category {
   text-decoration: none;
 }
 #article-container a:not([data-fancybox="gallery"]):not(.headerlink):not(.cf-friends-link):not(.btn-anzhiyu):hover {
-  color: var(--anzhiyu-white);
-  background: var(--anzhiyu-main);
-  box-shadow: var(--anzhiyu-shadow-lightblack);
-  border-radius: 0.25em;
-  text-decoration: none;
+  color: var(--anzhiyu-white) !important;
+  background: var(--anzhiyu-main) !important;
+  box-shadow: var(--anzhiyu-shadow-lightblack) !important;
+  border-radius: 0.25em !important;
+  text-decoration: none !important;
 }
 
 html.hide-aside .layout > div:first-child {
