--- a/source/css/_tags/btns.styl
+++ b/source/css/_tags/btns.styl
@@ -70,10 +70,11 @@ div
         cursor default
         color inherit
     a[href]:hover
-      background rgba(255, 87, 34, 0.15)
+      background: var(--anzhiyu-main)
+      color: var(--anzhiyu-white) !important
       & > i
         &:first-child
-          background #ff5722
+          background: var(--anzhiyu-main)
 
 div.btns,
 div.btns p,
