--- a/source/css/_tags/note.styl
+++ b/source/css/_tags/note.styl
@@ -18,6 +18,7 @@
 
   for $type in $color-types
     &.{$type}
+      color: $font-black
       &.disabled
         background: lighten(lookup('$tagsP-' + $type + '-color'), 85%) !important
       &:not(.disabled)
@@ -37,6 +38,7 @@
   &.simple
     border: 1px solid #EEEEEE
     border-left-width: 5px
+    color: var(--font-color);
 
   &.modern
     border: 1px solid transparent !important
@@ -48,6 +50,10 @@
     border-left: 5px solid #EEEEEE
     background-color: lighten(#EEEEEE, 65%)
     color: $font-black
+    a
+      color: $font-black !important
+      &:hover
+        color: var(--anzhiyu-white) !important;
 
   h2,
   h3,
