--- a/source/css/_third-party/twikoo.styl
+++ b/source/css/_third-party/twikoo.styl
@@ -37,6 +37,18 @@ if hexo-config('comments.use') == 'Twikoo'
     background-color: var(--anzhiyu-card-bg);
 
   #twikoo 
+    .tk-submit
+      .actions
+        .tk-send
+          background-color: var(--anzhiyu-main)
+          border-color: var(--anzhiyu-main)
+          &:hover 
+            opacity: 0.8;
+    .tk-action-icon
+      color: var(--anzhiyu-main)
+      cursor pointer
+    .tk-icon.__comments
+      color: var(--anzhiyu-main)
     .tk-actions
       a
        cursor pointer
