--- a/source/css/_third-party/twikoo.styl
+++ b/source/css/_third-party/twikoo.styl
@@ -60,7 +60,7 @@ if hexo-config('comments.use') == 'Twikoo'
     .tk-expand
       &:hover
         color: #fff;
-        background-color: #3b70fc;
+        background-color: var(--anzhiyu-main);
         border: var(--style-border-none);
 
     .tk-content 
