修复ai文章获取标题存在特殊符号时的获取不正确的问题

--- a/layout/includes/anzhiyu/ai-info.pug
+++ b/layout/includes/anzhiyu/ai-info.pug
@@ -137,7 +137,7 @@ if (description && ai)
               key: "#{theme.post_head_ai_description.key}",
               Referer: "#{theme.post_head_ai_description.Referer}"
             };
-            const truncateDescription = ("#{pageTitle}" + "#{description}").trim().substring(0, num)
+            const truncateDescription = ("#{pageTitle.replace(/<\/?[^>]+>|&|:|;|quot;|，|,|“|”|"|'|#/g, "")}" + "#{description}").trim().substring(0, num)
 
             const queryParams = `key=${options.key}&content=${truncateDescription}`;
             const requestOptions = {
@@ -304,14 +304,17 @@ if (description && ai)
           aiTitleRefreshIcon.style.opacity = "0.2";
           aiTitleRefreshIcon.style.transitionDuration = "0.3s";
           aiTitleRefreshIcon.style.transform = "rotate(" + 360 * refreshNum + "deg)";
-          if (truncateDescription.length <= 1000) {
+          console.info(truncateDescription.length)
+          if (truncateDescription.length <= #{basicWordCount}) {
             let param = truncateDescription.length - Math.floor(Math.random() * #{randomNum});
             while (param === prevParam) {
               param = truncateDescription.length - Math.floor(Math.random() * #{randomNum});
             }
+            console.info("小", param)
             aiAbstract(param);
             prevParam = param;
           } else {
+            console.info("大", value)
             aiAbstract(value);
             prevParam = value;
           }
