文章标题后的icon垂直居中对齐

--- a/source/css/_layout/post.styl
+++ b/source/css/_layout/post.styl
@@ -59,6 +59,10 @@ blockquote {
   h4,
   h5,
   h6
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row-reverse;
+    align-items: center;
     .post-content
       line-height: 1.6;
       border-top: 1px dashed var(--anzhiyu-theme-op);
