【关于】关于页面无content内容时的表现，取消无用边框。 修复非文章页面标题到右边去的问题

--- a/layout/includes/page/about.pug
+++ b/layout/includes/page/about.pug
@@ -200,9 +200,10 @@ if site.data.about
                 |  
                 span.banner-button-text 更多推荐
 
-      .author-content
-        .create-site-post.author-content-item.single
-          != page.content
+      if page.content
+        .author-content
+          .create-site-post.author-content-item.single
+            != page.content
         
       - let rawData = item.reward_list
       if rawData
