--- a/source/css/_page/tag_page.styl
+++ b/source/css/_page/tag_page.styl
@@ -151,6 +151,15 @@ span.categoryes-punctuation .icon-biaoqian
 
 
 body[data-type="tags"]
+  #page
+    border-radius: 12px
+    +maxWidth768()
+      #tag
+        padding: 0px 15px 20px
+      .page-title 
+        margin: 8px 0 0px
+  #body-wrap .layout
+    padding: 20px 15px
   #tag #tag-page-tags
     justify-content: center;
     a
