【右键菜单】优化右键菜单表现，无评论不显示右键菜单 【pwd标签】优化pwa标签暗色模式下的颜色表现

--- a/layout/includes/anzhiyu/anzhiyu-js.pug
+++ b/layout/includes/anzhiyu/anzhiyu-js.pug
@@ -28,6 +28,7 @@ script(data-pjax).
   anzhiyu.tagsPageActive();
   anzhiyu.categoriesBarActive();
   anzhiyu.topCategoriesBarScroll();
+  anzhiyu.switchRightClickMenuHotReview();
 
   anzhiyu.getCustomPlayList();
   anzhiyu.addEventListenerConsoleMusicList(false);
