--- a/layout/includes/anzhiyu/ai-info.pug
+++ b/layout/includes/anzhiyu/ai-info.pug
@@ -156,14 +156,24 @@ if (description && ai)
                 j = (j % 3) + 1; // 在 1、2、3 之间循环
               }, 500);
               const response = await fetch(`https://summary.tianli0.top/?${queryParams}`, requestOptions);
-              const result = await response.json();
+              let result;
+              if (response.status === 403) {
+                result = {
+                  summary: "403 refer与key不匹配"
+                }
+              } else if (response.status === 500) {
+                result = {
+                  summary: "500 系统内部错误"
+                }
+              } else {
+                result = await response.json();
+              }
               const summary = result.summary.trim();
               setTimeout(() => {
                 aiTitleRefreshIcon.style.opacity = "1";
               }, 300)
               startAI(summary);
               clearInterval(animationInterval)
-
             } catch (error) {
               console.error(error);
               explanation.innerHTML = "发生异常" + error;
