--- a/layout/includes/anzhiyu/ai-info.pug
+++ b/layout/includes/anzhiyu/ai-info.pug
@@ -159,7 +159,7 @@ if (description && ai)
               let result;
               if (response.status === 403) {
                 result = {
-                  summary: "403 refer与key不匹配"
+                  summary: "403 refer与key不匹配，本地无法显示。"
                 }
               } else if (response.status === 500) {
                 result = {
