优化algolia搜索 优化旋转动画

--- a/source/css/_global/function.styl
+++ b/source/css/_global/function.styl
@@ -132,6 +132,7 @@ minWidth2000()
   animation: scroll-down-effect 1.5s infinite
 
 .anzhiyu-spin
+  display: inline-block
   transform-origin: 50% 50%;
   animation-name: anzhiyu-spin;
   animation-duration: var(--anzhiyu-animation-duration,2s);
