--- a/source/css/_global/function.styl
+++ b/source/css/_global/function.styl
@@ -30,6 +30,13 @@ if hexo-config('icons.fontawesome')
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+.anzhiyufont::before
+  font-family: "anzhiyufont" !important;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
 // card hover
 .cardHover
   border-radius: 8px
