--- a/layout/includes/additional-js.pug
+++ b/layout/includes/additional-js.pug
@@ -122,6 +122,8 @@ div
   if theme.busuanzi.site_uv || theme.busuanzi.site_pv || theme.busuanzi.page_pv
     script(async data-pjax src= theme.asset.busuanzi || '//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js')
 
+  script(charset="UTF-8" src="/js/accesskey.js")
+
   if is_current("/") && theme.greetingBox.enable
     #greetingBox 
     script.
