--- a/layout/includes/header/nav.pug
+++ b/layout/includes/header/nav.pug
@@ -34,7 +34,7 @@ nav#nav
           i.anzhiyufont.anzhiyu-icon-dice
       if (theme.algolia_search.enable || theme.local_search.enable)
         div.nav-button#search-button
-          a.site-page.social-icon.search(href='javascript:void(0);', title='搜索🔍')
+          a.site-page.social-icon.search(href='javascript:void(0);', title='搜索🔍' accesskey="s")
             i.anzhiyufont.anzhiyu-icon-magnifying-glass
             span=' '+_p('search.title')
       
