--- a/source/css/_layout/head.styl
+++ b/source/css/_layout/head.styl
@@ -97,6 +97,7 @@
       margin: 0 -20% 0 auto;
       overflow: hidden;
       margin-bottom: 0;
+      user-select: none
       transform: rotate(10deg) translateY(-10%) scale(2);
       if !hexo-config('post_meta.post.mainTone')
         filter: blur(10px) brightness(60%);
@@ -573,6 +574,7 @@
   left: 0
   bottom: -11px
   z-index: 5
+  pointer-events: none
 
 .waves-area .waves-svg
   width: 100%
