--- a/layout/includes/additional-js.pug
+++ b/layout/includes/additional-js.pug
@@ -121,8 +121,8 @@ div
 
   if theme.busuanzi.site_uv || theme.busuanzi.site_pv || theme.busuanzi.page_pv
     script(async data-pjax src= theme.asset.busuanzi || '//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js')
-
-  script(charset="UTF-8" src="/js/accesskey.js")
+  if theme.accesskey.enable
+    script(charset="UTF-8" src=url_for(theme.asset.accesskey_js))
 
   if is_current("/") && theme.greetingBox.enable
     #greetingBox 
