新增nav动画 调整弹窗动画 优化nav性能

--- a/source/css/_layout/head.styl
+++ b/source/css/_layout/head.styl
@@ -471,10 +471,14 @@
 
           a
             display: inline-block
-            padding: 8px 16px
+            padding: .5625rem 1rem
             width: 100%
             color: var(--font-color) !important
             text-shadow: none !important
+            &:hover
+              color: var(--anzhiyu-white) !important
+              padding: .125rem 1.25rem;
+              transform: scale(1) !important;
 
   &.hide-menu
     #toggle-menu
