更新文章未读功能 css优化

--- a/source/css/_global/index.styl
+++ b/source/css/_global/index.styl
@@ -33,6 +33,7 @@
   --pseudo-hover: $pseudo-hover
   --headline-presudo: var(--anzhiyu-fontcolor)
   --scrollbar-color: $scrollbar-color
+  --anzhiyu-snackbar-time: 2000ms;
   --anzhiyu-deep-purple: #405589;
   --anzhiyu-meta-theme-color: #f7f9fe;
   --anzhiyu-bar-background: var(--anzhiyu-main);
