--- a/source/css/_layout/nav.styl
+++ b/source/css/_layout/nav.styl
@@ -463,9 +463,9 @@ ul.menus_item_child
   transition 0.3s
   display flex
   border-radius 50px
-  transition all 0.3s ease-in-out
   align-items center
   justify-content space-around
+  transition: all 0.3s ease-in-out;
 
 #page-header #nav #nav-right .nav-button a.totopbtn
   width 25px
@@ -473,7 +473,7 @@ ul.menus_item_child
   border-radius 40px
   background var(--font-color)
   color var(--card-bg)
-  transition 0.3s
+  transition all 0.3s ease-in-out
 
 #page-header #nav #nav-right .nav-button:not(.long) a.totopbtn:hover
   height 35px
