--- a/layout/includes/mixins/post-ui.pug
+++ b/layout/includes/mixins/post-ui.pug
@@ -13,16 +13,19 @@ mixin postUI(posts)
         const new_post = numberone !== 1 && is_current('/') && (!article.sticky || (article.new && article.sticky))
       -
       if (theme.post_meta.page.categories && article.categories.data.length > 0)
-        .article-meta__categories__box
+        .article-meta__categories__box(style=`${(new_post && !theme.cover.index_enable) ? "left: 72px":""}`)
           each item, index in article.categories.data
             a(href=url_for(item.path)).article-meta__categories #[=item.name]
+          a.unvisited-post(href=url_for(link) title=title style=`${(!theme.cover.index_enable) ? "position: static;": new_post ? "left: 72px;":""}`) 未读
+      else 
+        a.unvisited-post(href=url_for(link) title=title style=`${(new_post && theme.cover.index_enable) ? "left: 72px;":""}`) 未读
       if post_cover && theme.cover.index_enable
         .post_cover(class=leftOrRight)
           a(href=url_for(link) title=title)
             img.post_bg(src=url_for(post_cover) onerror=`this.onerror=null;this.src='`+ url_for(theme.error_img.post_page) + `'` alt=title)
       .recent-post-info(class=no_cover)
         if new_post
-          span.newPost 最新文章
+          span.newPost 最新
           - var numberone = 1
         a.article-title(href=url_for(link) title=title)= title
         .article-meta-wrap
