--- a/source/css/_page/homepage.styl
+++ b/source/css/_page/homepage.styl
@@ -16,6 +16,22 @@
     border-radius: 12px;
     box-shadow: none;
     transition: all 0.3s ease 0s;
+    .unvisited-post 
+      display: none
+      color: var(--anzhiyu-secondtext);
+      font-size: 0.5rem;
+      if hexo-config('post_meta.post.unread') 
+        display: flex
+      if hexo-config('cover.index_enable') 
+        position: fixed;
+        left: 40px;
+        top: 205px;
+      else 
+        position: absolute;
+        left: 40px;
+        top: 5px;
+      &:visited
+        color: var(--anzhiyu-card-bg);
     .recent-post-info
       margin-top: 0px;
       position: relative;
@@ -23,31 +39,47 @@
         display: flex;
         color: var(--anzhiyu-lighttext);
         font-size: 0.5rem;
-        position: absolute;
-        top: 3px;
+        margin-right: 8px;
+        top: 5px;
+        if hexo-config('cover.index_enable') 
+          position: absolute;
+        else 
+          position: fixed;
       .article-title
         font-weight: bold;
-    .article-meta__categories__box
-      position: absolute;
-      top: 15px;
-      left: 11px;
-      z-index: 1;
-      max-width: 100%;
-      display: flex;
-      .article-meta__categories
-        display: inline-block
-        padding: 1px 6px;
-        background: var(--anzhiyu-black-op);
-        border-radius: 8px;
-        margin-left: 4px;
-        font-size: 12px;
-        font-weight: 700;
-        color: var(--anzhiyu-white);
-        backdrop-filter: saturate(180%) blur(20px);
-        -webkit-backdrop-filter: blur(20px);
-        transform: translateZ(0);
-        &:hover 
-          background: var(--anzhiyu-main);
+    if hexo-config('cover.index_enable') 
+      .article-meta__categories__box
+        position: absolute;
+        top: 15px;
+        left: 11px;
+        z-index: 1;
+        max-width: 100%;
+        display: flex;
+        .article-meta__categories
+          display: inline-block
+          padding: 1px 6px;
+          background: var(--anzhiyu-black-op);
+          border-radius: 8px;
+          margin-left: 4px;
+          font-size: 12px;
+          font-weight: 700;
+          color: var(--anzhiyu-white);
+          backdrop-filter: saturate(180%) blur(20px);
+          -webkit-backdrop-filter: blur(20px);
+          transform: translateZ(0);
+          &:hover 
+            background: var(--anzhiyu-main);
+    else 
+      .article-meta__categories__box
+        display: flex;
+        color: var(--anzhiyu-secondtext);
+        font-size: 0.5rem;
+        position: absolute;
+        left: 40px;
+        top: 5px;
+        opacity: .8;
+        .article-meta__categories
+          margin-right: 8px;
 
     +maxWidth768()
       flex-direction: column
@@ -86,9 +118,8 @@
 
         +maxWidth768()
           order: 0
-
     & >.recent-post-info
-      padding: 23px 40px 10px
+      padding: 1.875rem 2.5rem .85rem
       width: 57%
 
       +maxWidth768()
