修复控制台入口被遮挡问题和颜色问题

--- a/source/css/_layout/head.styl
+++ b/source/css/_layout/head.styl
@@ -216,6 +216,9 @@
         a
           color: var(--font-color)
           text-shadow: none
+      #center-console + label
+        i
+          background: var(--font-color)
 
   &.nav-fixed
     #nav
