修复移动端侧边栏图标不固定的问题

--- a/source/css/_layout/nav.styl
+++ b/source/css/_layout/nav.styl
@@ -20,6 +20,7 @@
   font-size: 14px
   height: 4.2rem;
   width: 7rem;
+  justify-content: space-between;
 
 #sidebar .menus_item ul
   padding-left: 0px
